# LOW-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LowEngine - VS2022 Win32.lnk  LowEngine - VS2026 Win32.lnk  README.md  compile_commands.json  generate_vs2022-win32-sln.bat  generate_vs2026-win32-sln.bat  generate_vs2026-win32-slnx.bat
docs/manual/: new-project-wizard.md
lords-of-war/: config.h  main.cpp
lords-of-war/assets/maps/: terrain_map_01.ldtk
low-editor/: EditorConfig.h  main.cpp
low-editor/assets/maps/terrain_map_01/: BasicMap.ldtkl
low-editor/devtools/: Action.cpp  Action.h  Assets.cpp  Assets.h  ComponentEditorBinding.cpp  ComponentEditorBinding.h  DevTools.cpp  DevTools.h  FormatHelpers.cpp  FormatHelpers.h
low-editor/devtools/controls/: ImageTextButton.cpp  ImageTextButton.h  SoundPicker.cpp  SoundPicker.h  TexturePicker.cpp  TexturePicker.h
low-editor/devtools/editors/: AnimatedSpriteEditor.cpp  AnimatedSpriteEditor.h  CameraEditor.cpp  CameraEditor.h  ColliderEditor.cpp  ColliderEditor.h  SoundCueEditor.cpp  SoundCueEditor.h  SoundEditor.cpp  SoundEditor.h  SpriteEditor.cpp  SpriteEditor.h  TransformEditor.cpp  TransformEditor.h
low-editor/devtools/panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  InputEditorPanel.cpp  InputEditorPanel.h  ProjectWizardPanel.cpp  ProjectWizardPanel.h  ScenePanel.cpp  ScenePanel.h  TerrainPanel.cpp  TerrainPanel.h
low-editor/devtools/panels/asset_browser/: AnimationClipsBrowser.cpp  AnimationClipsBrowser.h  EmittersBrowser.cpp  EmittersBrowser.h  MusicBrowser.cpp  MusicBrowser.h  SoundsBrowser.cpp  SoundsBrowser.h  SpriteSheetsBrowser.cpp  SpriteSheetsBrowser.h  TexturesBrowser.cpp  TexturesBrowser.h
low-editor/devtools/tools/: TerrainBrush.cpp  TerrainBrush.h  TerrainBrushManager.cpp  TerrainBrushManager.h
low-engine/: Config.h  EngineConfig.h  Game.cpp  Game.h  Log.cpp  Log.h  LowEngine.cpp  LowEngine.h  LowHeaders.h
low-engine/assets/: AssetManager.cpp  AssetManager.h  Assets.cpp  Assets.h
low-engine/assets/animation/: AnimationSheet.cpp  AnimationSheet.h  SpriteSheet.cpp  SpriteSheet.h
low-engine/assets/defaults/: unitblock.hpp
low-engine/assets/files/: Music.h  SoundBuffer.h  Texture.h
low-engine/assets/particles/: Emitter.cpp  Emitter.h  Particle.h
low-engine/assets/terrain/: Layer.cpp  Layer.h  LayerDefinition.cpp  LayerDefinition.h  LayerToTextureMapping.cpp  LayerToTextureMapping.h  LayerType.h  Map.cpp  Map.h  TileMap.cpp  TileMap.h
low-engine/assets/terrain/navigation/: AStar.cpp  AStar.h  NavigationCell.cpp  NavigationGrid.cpp
low-engine/devtools/: DevTools.cpp  DevTools.h
low-engine/ecs/: Component.cpp  Component.h  ECSHeaders.h  Entity.cpp  Entity.h  IComponent.h  IEntity.h
low-engine/ecs/Components/: AnimatedSpriteComponent.cpp  AnimatedSpriteComponent.h  CameraComponent.cpp  CameraComponent.h  ColliderComponent.cpp  ColliderComponent.h  MapComponent.cpp  MapComponent.h  ParticleComponent.cpp  ParticleComponent.h  ScriptComponent.cpp  ScriptComponent.h  SoundComponent.cpp  SoundComponent.h  SoundCueComponent.cpp  SoundCueComponent.h  SpriteComponent.cpp  SpriteComponent.h  TileMapComponent.cpp  TileMapComponent.h  TransformComponent.cpp  TransformComponent.h
low-engine/graphics/: Drawables.h  Sprite.h
low-engine/input/: Action.cpp  Action.h  InputManager.cpp  InputManager.h
low-engine/log/: Log.cpp  Log.h  LogMemoryBufferSink.h
low-engine/memory/: ComponentPool.cpp  ComponentPool.h  ComponentRegistry.cpp  ComponentRegistry.h  ComponentView.h  Memory.cpp  Memory.h
low-engine/music/: MusicManager.cpp  MusicManager.h
low-engine/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
low-engine/terrain/: TerrainManager.cpp  TerrainManager.h  Tile.h  TileMapLayer.cpp  TileMapLayer.h
low-engine/terrain/navigation/: NavigationCell.h  NavigationGrid.h
low-engine/utils/: ColorUtils.h  TypeHash.h  TypeName.h  Uuid.h
source/: main.cpp
source/ecs/: Entity.h
source/ecs/Components/: TransformComponent.cpp  TransformComponent.h
source/memory/: Memory.cpp  Memory.h
tests/: test_component_pool.cpp  test_main.cpp  test_memory.cpp  test_utils.cpp
